# ledwall-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: commitlint.yml
dist-isolation/: index.html  index.js
public/: splashscreen.html
src/: App.js  App.old.tsx  App.test.tsx  App.tsx  AppThemeHolder.tsx  Footer.tsx  MainApp.tsx  Navbar.tsx  NotificationHandler.tsx  index.css  index.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: ledwall_status_holder.rs  ledwallcontrol.rs  mod.rs  notification.rs  slice.rs
src-tauri/src/controler/: mod.rs
src.old/: main.rs
src/components/Footer/: Footer.tsx
src/components/NavBar/: Navbar.tsx
src/components/SlabSelector/: SlabSelector.tsx  index.ts
src/components/SliceConfiguration/: SliceConfiguration.tsx  index.ts
src/data/query/: QueryKeys.ts
src/data/query/apis/: spoutApi.ts
src/data/store/: notificationsReducers.ts  notificationsSlice.ts  slicesReducers.ts  slicesSlice.ts  store.ts
src/data/types/: LedwallControlTypes.ts  Notification.tsx  Slice.ts  Spout.ts  utils.ts
src/hooks/: useRPC.ts  useRemoteState.ts
src/pages/: ConfigPage.tsx  ConsolePage.tsx  ControlPage.tsx  GuidePage.tsx  Page.tsx
src/pages/ConfigPage/: ConfigPage.tsx  Footer.tsx  SlicesContainer.tsx
src/pages/ConsolePage/: ConsolePage.tsx
src/pages/ControlPage/: ControlPage.hooks.ts  ControlPage.tsx  ControlPageButtons.tsx  ControlPageIcon.tsx
src/pages/GuidePage/: GuidePage.tsx
src/style/: common.tsx
(+11 files in other folders)
